# gazer

./: .gitignore  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  LICENSE  ocec_m.onnx  results.jsonl
examples/: mpii_bench.rs  replay.rs  test_on_image.rs  webcam.rs  webgazer.rs  webgazer_cnn.rs
src/: blink.rs  calibration.rs  classify.rs  detect.rs  gaze.rs  lib.rs  ridge.rs  sugano.rs
survey/: eye_tracking_survey.tex
tools/: preprocess_mpii.py
